--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,5 +1,5 @@
 body {
- 	background:url(/blog-notes/images/bg.jpg);
+ 	background:url(../images/bg.jpg);
  	background-repeat: no-repeat;
     background-attachment:fixed;
     background-position:100% 100%;
